welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: '(' expected but identifier found.
  if noDoubles==false){
     ^withoutDoubles:12: error: illegal start of simple expression
} 
^